data/derived/fa15/progs/unify/prog0250.ml.out
Characters 82-85:
  | 0 -> if (rand(0.0,2.0) = 0.0) then Varx else Vary
                             ^^^
Error: This expression has type float but an expression was expected of type
         int
